# sql-query-synthesizer

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  =2.0  ARCHITECTURE.md  AUTONOMOUS_BACKLOG_README.md  AUTONOMOUS_SDLC_COMPLETION_REPORT.md  AUTONOMOUS_SDLC_ENHANCEMENT_REPORT.md  AUTONOMOUS_SDLC_FINAL_REPORT.md  AUTONOMOUS_SDLC_GUIDE.md  BACKLOG.md  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CODE_REVIEW.md  CONTRIBUTING.md  DEVELOPMENT_PLAN.md  Dockerfile  Dockerfile.production  Dockerfile.progressive-quality-gates  ENHANCED_SETUP_GUIDE.md  ITERATION_REPORT_5.md  Makefile  PRODUCTION_DEPLOYMENT_GUIDE.md  PROJECT_CHARTER.md  QUANTUM_DEPLOYMENT_GUIDE.md  QUANTUM_RESEARCH_PUBLICATION_DRAFT.md  README.md  README_SDLC_ENHANCEMENT.md  RESEARCH_PUBLICATION_DRAFT.md  SDLC_ENHANCEMENT_REPORT.md  SDLC_IMPLEMENTATION_FINAL_REPORT.md  SDLC_IMPLEMENTATION_SUMMARY.md  SECURITY.md  SPRINT_BOARD.md  TERRAGON_AUTONOMOUS_IMPLEMENTATION_REPORT.md  TERRAGON_AUTONOMOUS_SDLC_FINAL_REPORT.md  (+71 more)
.devcontainer/: devcontainer.json  docker-compose.devcontainer.yml
.github/: CODEOWNERS  dependabot.yml  project-metrics.json  pull_request_template.md  security.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  security-monitoring.yml
.terragon/: config.yaml
benchmarks/: performance_benchmark.py
config/: databases.yaml
deployment/: README.md  deploy.sh  docker-compose.production.yml  entrypoint.sh  gunicorn.conf.py  healthcheck.py  production-deployment-guide.md  production.env.example  progressive-quality-gates.yml
docs/: ADVANCED_RELEASE_AUTOMATION.md  API.md  API_DOCUMENTATION.md  COMPLIANCE.md  DEPLOYMENT.md  DEVELOPMENT.md  GITHUB_WORKFLOWS.md  IMPLEMENTATION_SUMMARY.md  INFRASTRUCTURE_AS_CODE.md  MODERNIZATION_REPORT.md  PERFORMANCE.md  PERFORMANCE_OPTIMIZATION.md  ROADMAP.md  SDLC_CHECKPOINT_STRATEGY.md  SECURITY_HARDENING.md  SETUP_REQUIRED.md  SETUP_REQUIRED_EXTENDED.md  SLSA_COMPLIANCE.md  TROUBLESHOOTING.md
docs/adr/: 0001-service-layer-architecture.md  0002-multi-backend-caching-strategy.md  0003-security-first-design.md  README.md
docs/deployment/: README.md  build-automation.md
docs/guides/: README.md
docs/monitoring/: README.md  observability-enhancement.md
docs/runbooks/: README.md  incident-response.md
docs/security/: compliance-automation.md
docs/status/: 20250726.json  20250726.md  autonomous-completion-report.json  autonomous_execution_final_report_20250725.json  autonomous_execution_final_report_20250727.json  autonomous_execution_report_20250725.json  autonomous_execution_report_20250726.json  backlog_status_20250724_113748.json  backlog_status_20250724_114633.json  backlog_status_20250724_114707.json  backlog_status_20250724_114718.json  backlog_status_20250724_120323.json  backlog_status_20250724_120836.json  backlog_status_20250724_135241.json  backlog_status_20250724_135925.json  backlog_status_20250724_140117.json  backlog_status_20250724_140138.json  backlog_status_20250727_071405.json  backlog_status_20250727_071530.json  backlog_status_20250727_071553.json  backlog_status_20250727_071657.json
docs/testing/: README.md  TESTING_GUIDE.md
docs/workflows/: CI_CD_SETUP_GUIDE.md  README.md  github-actions-implementation.md
infrastructure/: docker-compose.prod.yml
infrastructure/terraform/: main.tf  variables.tf
research_results/: benchmark_report_20250816_123914.json  benchmark_summary_20250816_123914.csv
sample_data/: README.md  demo_queries.txt
scripts/: api_tester.py  collect_metrics.py  db_manager.py  generate_advanced_sbom.py  generate_sbom.py  repository_health.py
scripts/automation/: README.md  dependency_update.sh
sdlc-workflows/: dependency-management.yml  dora-metrics.yml  release-automation.yml
sql_synthesizer/: __init__.py  adaptive_caching.py  async_openai_adapter.py  async_query_agent.py  auto_scaling_engine.py  cache.py  circuit_breaker.py  comprehensive_validation.py  config.py  core.py  database.py  db_connection.py  enhanced_core.py  executor.py  generator.py  intelligent_query_router.py  llm_interface.py  logging_utils.py  metrics.py  openai_adapter.py  parser.py  performance_optimizer.py  query_agent.py  robust_error_handling.py  scaling_optimizer.py  schema.py  security.py  security_audit.py  sync_query_agent.py  synthesizer.py  types.py  user_experience.py  validator.py  webapp.py
sql_synthesizer/autonomous_sdlc/: README.md  __init__.py  autonomous_deployment.py  enhanced_error_handling.py  progressive_quality_gates.py  quality_gates.py  quantum_quality_optimizer.py  resilient_quality_framework.py  scaling_optimizer.py
sql_synthesizer/database/: __init__.py  connection.py  migrations.py  repositories.py  schemas.py
sql_synthesizer/intelligence/: __init__.py  adaptive_learning.py  intelligent_cache.py  query_insights.py
sql_synthesizer/quantum/: __init__.py  auto_scaling.py  cache.py  core.py  (+10 more)
terragon_outputs/: quality_summary_terragon_1756007657.md  research_summary_terragon_1756007657.md  terragon_execution_report_20250824_035422.json
tests/: conftest.py  sprint_acceptance_criteria.json  test_agent.py  test_async_openai_adapter.py  test_async_query_service.py  test_autonomous_sdlc.py  test_cache.py  test_cache_backends.py  test_cache_metrics.py  test_circuit_breaker.py  test_comprehensive_metrics.py  test_config.py  test_core.py  test_database.py  test_database_layer.py  test_docs_validation.py  test_enhanced_functionality.py  test_enhanced_sql_injection.py  test_executor.py  test_generator.py  test_integration.py  test_llm_interface.py  test_logging.py  test_metrics.py  test_openai_adapter.py  test_openapi_docs.py  test_parser.py  test_progressive_quality_gates.py  test_quantum_autonomous_systems.py  test_quantum_optimization.py  test_query_agent_cache_metrics.py  test_query_agent_db_integration.py  test_query_pagination.py  test_query_service.py  test_query_validator_service.py  test_queryagent_validation.py  test_resilient_quality_framework.py  test_runner.py  test_schema.py  test_security.py  (+13 more)
(+48 files in other folders)
