[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "sql_query_synthesizer"
version = "0.0.1"
requires-python = ">=3.8"
dependencies = [
    "SQLAlchemy>=1.4",
    "sqlparse>=0.5",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["sql_query_synthesizer"]
